--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@lark-opdev/block-bitable-api": "^0.4.1-alpha.11",
     "dompurify": "^3.3.0",
     "highlight.js": "^11.11.1",
     "html2canvas": "^1.4.1",
